# SAE_Bench_Template

./: .gitignore  README.md  blog_post_graphs.ipynb  can_grapher.py  compare_run_results.ipynb  custom_sae_demo.ipynb  eval_template.ipynb  formatting_utils.py  graph_sae_results.ipynb  graphing.ipynb  graphing_utils.py  old_graphing.ipynb  pull_results.py  pyproject.toml  requirements.txt  run_all_evals_custom_saes.py  sae_bench_demo.ipynb  sae_regex_selection.ipynb  template.ipynb
baselines/: identity_sae.py  jumprelu_sae.py  pca_sae.py  sae_config.py
custom_saes/: README.md  custom_sae_config.py  custom_sae_demo.ipynb  identity_sae.py  jumprelu_sae.py  pca_sae.py  run_all_evals_custom_saes.py  topk_sae.py  vanilla_sae.py
evals/: base_eval_output.py  generate_json_schemas.py
sae_bench_data/: gemma-scope-2b-pt-res_data.json  sae_bench_gemma-2-2b_sweep_standard_ctx128_ef2_0824_data.json  sae_bench_gemma-2-2b_sweep_standard_ctx128_ef8_0824_data.json  sae_bench_gemma-2-2b_sweep_topk_ctx128_ef2_0824_data.json  sae_bench_gemma-2-2b_sweep_topk_ctx128_ef8_0824_data.json  sae_bench_pythia70m_sweep_gated_ctx128_0730_data.json  sae_bench_pythia70m_sweep_panneal_ctx128_0730_data.json  sae_bench_pythia70m_sweep_standard_ctx128_0712_data.json  sae_bench_pythia70m_sweep_topk_ctx128_0730_data.json
sae_bench_utils/: __init__.py  activation_collection.py  dataset_info.py  dataset_utils.py  formatting_utils.py  general_utils.py  graphing_utils.py  indexing_utils.py  modify_old_results.ipynb  sae_selection_utils.py  testing_utils.py
shell_scripts/: README.md  run.sh  (+3 more)
(+387 files in other folders)
