[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[project]
name = "sae_bench_template"
version = "0.1.0"
requires-python = ">=3.10"

dependencies = [
    "sae_lens>=3.23.1",
    "transformer-lens>=2.0.0",
    "torch>=2.1.0",
    "einops>=0.8.0",
    "numpy>=1.26.4,<2.0",
    "pandas>=2.1.2",
    "tqdm>=4.66.4",
    "jaxtyping>=0.2.25",
    "beartype>=0.14.1",
    "scikit-learn>=1.5.2",
    "pydantic>=2.9.2",
    "tabulate>=0.9.0",

    # Plotting stuff
    "seaborn>=0.13.2",
    "plotly>=5.22.0",
    "matplotlib>=3.8.4",

    # Dev / formatting stuff
    "pytest>=8.0.2",
    "nbformat>=5.10.4",
    "ipykernel>=6.29.5",
    "nbstripout>=0.7.1",
]

[tool.pyright]
typeCheckingMode = "standard"
